--- a/src/app/asset/asset/asset.component.css
+++ b/src/app/asset/asset/asset.component.css
@@ -1,9 +1,9 @@
-.button button {
+/* .button button {
   width: 200px;
   height: 50px;
   text-align: center;
   font-size: larger;
-}
+} */
 
 .button2 button{
   width: 200px;
