added header buttons and styles | move button styles to global

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,51 @@
 <!-- <h1 style="text-align: center; margin: 20px; font-size: 3rem;"> Welcome </h1> -->
 
 
-<header class="fixed top-0 left-0 w-full flex items-center justify-center py-6 z-50">
+<!-- <header class="fixed top-0 left-0 w-full flex items-center justify-center py-6 z-50">
     <div class="">
       <h1 class="text-5xl md:text-7xl font-serif font-light tracking-tight text-gray-900 dark:text-white leading-tight">
         <span class="block">Aether</span>
         <span class="block text-gray-500 dark:text-white text-xl tracking-widest mt-2">Luxury Meets Innovation</span>
       </h1>
     </div>
-  </header>
+  </header> -->
+
+<header class="fixed top-0 left-0 w-full py-6 z-50 ">
+  <div class="relative flex items-center justify-center w-full">
+
+    <div class=" absolute left-0 flex space-x-24 pl-32 text-lg ">
+      <button class="font-mono relative h-12 overflow-hidden rounded bg-transparent px-5 py-2.5 text-black dark:text-white transition-all duration-300 hover:bg-transparent hover:ring-1 hover:ring-black dark:hover:ring-white">
+        <span class="relative">Products</span>
+      </button>
+      <button class=" font-mono relative h-12 overflow-hidden rounded bg-transparent px-5 py-2.5 text-black dark:text-white transition-all duration-300 hover:bg-transparent hover:ring-1 hover:ring-black dark:hover:ring-white">
+        <span class="relative">About Us</span>
+      </button>
+    </div>
+
+    <!-- Logo -->
+    <div>
+      <h1 class="text-5xl md:text-7xl font-serif font-light tracking-tight text-gray-900 dark:text-white leading-tight text-center">
+        <span class="block">Aether</span>
+        <span class="block text-gray-500 dark:text-white text-xl tracking-widest mt-2">Luxury Meets Innovation</span>
+      </h1>
+    </div>
+
+    <div class="text-lg absolute right-0 flex space-x-24 pr-32">
+      <button class=" font-mono relative h-12 overflow-hidden rounded bg-transparent px-5 py-2.5 text-black dark:text-white transition-all duration-300 hover:bg-transparent hover:ring-1  hover:ring-black dark:hover:ring-white">
+        <span class="relative">Services</span>
+      </button>
+      <button class="font-mono relative h-12 overflow-hidden rounded bg-transparent px-5 py-2.5 text-black dark:text-white transition-all duration-300 hover:bg-transparent hover:ring-1 hover:ring-black dark:hover:ring-white">
+        <span class="relative">Contact</span>
+      </button>
+
+    </div>
+
+
+  </div>
+</header>
+
+
+
 
 <div class="min-h-screen transition-colors duration-1000 bg-white dark:bg-black text-black dark:text-white">
 
