--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,6 +44,9 @@
   </div>
 </header>
 
+<div class="hs-tooltip" data-hs-tooltip-content="Hello!">
+  <button class="btn btn-primary">Hover me</button>
+</div>
 
 
 
